# django-chat

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
chat/: asgi.py  consumers.py  jwt_middleware.py  middleware.py  models.py  routing.py  serializers.py  settings.py  settings_test.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: test_api.html
chat/tests/: test_consumers.py  test_models.py
django_chat/: settings.py
