[project]
name = "django-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.0",
    "django>=5.1.7",
    "django-redis>=5.4.0",
    "ruff>=0.11.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
]
