[project]
name = "django-chat"
version = "0.1.0"
description = "Real-time chat system using Django and Channels"
authors = []
dependencies = [
    "django>=5.0.0",
    "channels>=4.0.0",
    "channels-redis>=4.1.0",
    "djangorestframework>=3.14.0",
    "psycopg2-binary>=2.9.9",
    "django-redis>=5.4.0",
    "daphne>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
]
